Terminado as funcionalidades dos podutos

--- a/cardapios/pizzaria/pizzariaAdmin.html
+++ b/cardapios/pizzaria/pizzariaAdmin.html
@@ -109,228 +109,13 @@
             </h2>
 
             <div class="menu wrapper" id="menu">
-                <div
+                <div id="produtos-container"
                     class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
-
-                    <!--Produto Item 1 -->
-                    <!-- Card de Produto Editável -->
-                    <div class="produto-card flex rounded-md shadow-md" id="produto-card">
-
-                        <!-- Upload de Imagem -->
-                        <div class="upload-box">
-                            <label for="produto-imagem">
-                                <div class="upload-preview" id="preview">
-                                    <span>+</span>
-                                    <p>Adicionar imagem</p>
-                                </div>
-                            </label>
-                            <input type="file" id="produto-imagem"  accept="image/*" hidden>
-                        </div>
-
-                        <!-- Formulário -->
-                        <div class="flex flex-col">
-                            <div class="inputs" id="form-area">
-                                <input type="text" id="produto-nome" placeholder="Adicionar nome" class="input-text">
-                                <textarea id="produto-descricao" placeholder="Adicionar descrição ..."
-                                    class="input-text"></textarea>
-                                <input type="number" id="produto-preco" placeholder="Adicionar Preço ..."
-                                    class="input-text">
-                            </div>
-
-                            <!-- Botões -->
-                            <div class="flex gap-2 mt-2" id="form-buttons">
-                                <button class="btn salvar" id="btn-salvar">Salvar</button>
-                                <button class="btn cancelar" id="btn-cancelar">Cancelar</button>
-                            </div>
-
-                            <!-- Botão Editar (aparece depois de salvar) -->
-                            <div id="edit-area" style="display:none; text-align:center; margin-top:10px;">
-                                <button id="btn-editar" class="btn editar">Editar</button>
-                            </div>
-                        </div>
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
-                    <!--Produto Item 2 -->
-                    <div class="flex gap-3">
-                        <img src="../../imagens/Pizza 5 queijos.avif" alt="Pizza 5 queijos"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="flex-1">
-                            <p1 class="font-bold">Pizza 5 queijos </p1>
-                            <p class="text-sm">Mussarela, Catupiry, parmesão, Gorgonzola, Provolone.</p>
-
-                            <div class="flex items-center gap-2 justify-between mt-3">
-                                <p1 class="font-blond text-lg">R$ 19.90</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pizza 5 queijos"
-                                    data-price="19.90">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
-                    <!--Produto Item 3 -->
-                    <div class="flex gap-3">
-                        <img src="../../imagens/Pizza de Peperoni.jpg" alt="Pizza de Peperoni"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="flex-1">
-                            <p1 class="font-bold">Pizza Peperoni </p1>
-                            <p class="text-sm">Molho, Mussarela, Peperoni, oregano.</p>
-
-                            <div class="flex items-center gap-2 justify-between mt-3">
-                                <p1 class="font-blond text-lg">R$ 22.90</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pizza de Peperoni"
-                                    data-price="22.90">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
-                    <!--Produto Item 4 -->
-                    <div class="flex gap-3">
-                        <img src="../../imagens/Pizza de Bacon.avif" alt="Pizza de Bacon"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="flex-1">
-                            <p1 class="font-bold">Pizza de Torresmo </p1>
-                            <p class="text-sm">Molho, Mussarela, Torresmo, azeitona preta, cebola, oregano.</p>
-
-                            <div class="flex items-center gap-2 justify-between mt-3">
-                                <p1 class="font-blond text-lg">R$ 27.90</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pizza de Torresmo"
-                                    data-price="27.90">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
-                    <!--Produto Item 5 -->
-                    <div class="flex gap-3">
-                        <img src="../../imagens/Pizza Portuguesa.webp" alt="Pizza Portuguesa"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="flex-1">
-                            <p1 class="font-bold">Pizza Portuguesa </p1>
-                            <p class="text-sm">Molho, Mussarela, Calabresa, Milho Verde, Ovo, Pimentao, Cebola, Bacon.
-                            </p>
-
-                            <div class="flex items-center gap-2 justify-between mt-3">
-                                <p1 class="font-blond text-lg">R$ 27.90</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pizza Portuguesa"
-                                    data-price="27.90">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
-                    <!--Produto Item 6 -->
-                    <div class="flex gap-3">
-                        <img src="../../imagens/Pizza Frango Catupiry.jpg" alt="Pizza Frango com Catupiry"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="flex-1">
-                            <p1 class="font-bold">Pizza Frango com Catupiry </p1>
-                            <p class="text-sm">Molho, Mussarela, Frango, Catupiry, oregano.</p>
-
-                            <div class="flex items-center gap-2 justify-between mt-3">
-                                <p1 class="font-blond text-lg">R$ 24.90</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pizza de Peperoni"
-                                    data-price="24.90">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
-                    <!--Produto Item 7 -->
-                    <div class="flex gap-3">
-                        <img src="../../imagens/Pizza Tomate.avif" alt="Pizza de Tomate"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="flex-1">
-                            <p1 class="font-bold">Pizza de Tomate </p1>
-                            <p class="text-sm">Molho, Mussarela, Tomate, tomate pequeno, azeitona preta, cebola, alface
-                                americano.</p>
-
-                            <div class="flex items-center gap-2 justify-between mt-3">
-                                <p1 class="font-blond text-lg">R$ 25.90</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pizza de Tomate"
-                                    data-price="25.90">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
-                    <!--Produto Item 8 -->
-                    <div class="flex gap-3">
-                        <img src="../../imagens/Pizza Cereja.jpg" alt="Pizza Cereja"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="flex-1">
-                            <p1 class="font-bold">Pizza Cereja </p1>
-                            <p class="text-sm">Chocolate, Cereja, confeito de Chocolate.</p>
-
-                            <div class="flex items-center gap-2 justify-between mt-3">
-                                <p1 class="font-blond text-lg">R$ 25.90</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pizza Cereja"
-                                    data-price="25.90">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
-                    <!--Produto Item 9 -->
-                    <div class="flex gap-3">
-                        <img src="../../imagens/Pizza Doce.avif" alt="Pizza Doce"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="flex-1">
-                            <p1 class="font-bold">Pizza Doce </p1>
-                            <p class="text-sm">Chocolate, Creme de Leite, Morango, confeito de Chocolate.</p>
-
-                            <div class="flex items-center gap-2 justify-between mt-3">
-                                <p1 class="font-blond text-lg">R$ 29.90</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pizza Doce"
-                                    data-price="29.90">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--FIM DO PRODUTO-->
+                    <!-- Os 9 produtos serão carregados via JavaScript -->
                 </div>
             </div>
         </section>
+        <!--FIM DO MENU-->
 
 
         <!--  BEBIDAS  -->
