Nova funcionalidade acrescentada: - adicionar e remover produto.
- Ajustes no JS.

--- a/cardapios/pizzaria/pizzariaAdmin.html
+++ b/cardapios/pizzaria/pizzariaAdmin.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/layouts/pizzaria.css">
     <link rel="stylesheet" href="../../styles/mobile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -111,7 +112,7 @@
             <div class="menu wrapper" id="menu">
                 <div id="produtos-container"
                     class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
-                    <!-- Os 9 produtos serão carregados via JavaScript -->
+                    <!-- Os produtos são carregados -->
                 </div>
             </div>
         </section>
