- Finalizado o menu de produtos e bebidas.

--- a/cardapios/pizzaria/pizzariaAdmin.html
+++ b/cardapios/pizzaria/pizzariaAdmin.html
@@ -109,8 +109,8 @@
                 Conheça nosso menu
             </h2>
 
-            <div class="menu wrapper" id="menu">
-                <div id="produtos-container"
+            <div class="menu wrapper p-top-min" id="menu">
+                <div id="produtos"
                     class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
                     <!-- Os produtos são carregados -->
                 </div>
@@ -125,50 +125,10 @@
                 <h2 class="front-blond text-3xl">Bebidas</h2>
             </div>
 
-            <div class="bebidas wrapper">
+            <div class="bebidas wrapper p-top-min">
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16"
                     id="bebidas">
-                    <!--  Produto Item BEBIDA 1 -->
-                    <div class="flex gap-2 w-full">
-                        <img src="../../imagens/Coca-cola.png" alt="Coca-cola"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="w-full">
-                            <p1 class="font-bold">Coca-cola </p1>
-                            <p class="text-sm">350 ml.</p>
-                            <div class="flex items-center gap-2 justify-between mt-4">
-                                <p1 class="font-blond text-lg">R$ 4.99</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Coca-cola"
-                                    data-price="4.99">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
-                    <!--  Produto Item BEBIDA 2  -->
-                    <div class="flex gap-2">
-                        <img src="../../imagens/Guarana Antartica.png" alt="Guarana"
-                            class="w-28 h-28 rounded-md hover:scan-11 hover:scale-110 duration-300" />
-
-                        <div class="w-full">
-                            <p1 class="font-bold">Guarana Antartica</p1>
-                            <p class="text-sm">1,5 L.</p>
-                            <div class="flex items-center gap-2 justify-between mt-4">
-                                <p1 class="font-blond text-lg">R$ 11.90</p1>
-                                <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Guarana Antartica"
-                                    data-price="11.90">
-
-                                    <i class="fa fa-cart-plus text-lg text-white"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--FIM DO PRODUTO-->
-
+                    <!-- bebidas vão ser carregadas pelo JS -->
                 </div>
             </div>
         </section>
